--- a/DPSA/.cproject
+++ b/DPSA/.cproject
@@ -216,5 +216,7 @@
         <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
         	
     </storageModule>
+    	
+    <storageModule moduleId="refreshScope"/>
     
 </cproject>
